welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(tab:Array[Int] ,lookingFor:Int): Int = {
  for (i <- 0 to tab.length -1) {
    if (tab(i)==lookingFor) {
      return i
    } else return -1
	}
}